<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShedCafe_Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="507dp"
        android:layout_height="184dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@android:string/fingerprint_icon_content_description"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/shed" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="341dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="9dp"
        android:text="@string/shed"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/favShed"
        android:layout_width="51dp"
        android:layout_height="66dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="16dp"
        android:onClick="shedfav"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.Holo.Light.RatingBar.Indicator"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="13dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="3.7"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Lemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />


    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonshed"
        android:layout_width="145dp"
        android:layout_height="66dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/get_direction"
        android:onClick="directionShed"
        android:src="@drawable/ic_directions_black_24dp"
        android:text="Get Direction"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toEndOf="@+id/favEat"
        app:layout_constraintTop_toBottomOf="@+id/editText7"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="397dp"
        android:layout_height="68dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:text="Cafe Bustling cafe and gift shop offering breakfast, coffee and cakes, plus sandwiches and hearty mains."
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/favEat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="397dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:text="@string/address_43_bridge_st_hurstville_nsw_2220"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/editText6"
        android:layout_width="397dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:text="@string/hours_opens_6am_4_pm_mon_fri"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/editText7"
        android:layout_width="397dp"
        android:layout_height="38dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:text="phone: 02 95705079"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/favEat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

</android.support.constraint.ConstraintLayout>